--- a/Practica 1/Documentacion/como_se_hizo.tex
+++ b/Practica 1/Documentacion/como_se_hizo.tex
@@ -34,7 +34,7 @@
 
 La presente memoria tiene como objetivo esclarecer y/o justificar el diseño y desarrollo de la página web sobre un gimnasio propuesta, utilizando únicamente HTML5 y CSS3. Dicho desarrollo se ha nutrido, por un lado, de los conocimiento brindados en clase, reflejados en \cite{html5} y \cite{css}. Por otro lado, he realizado un gran trabajo autodidacta por medio de los tutoriales, guías y ejemplos alojados en \cite{w3sh} y \cite{w3sc}. Todos ellos han resultado verdaderamente útiles en la incorporación de novedades externas a lo explicado en clase. He de reconocer que poco hay que añadir a lo explicado de HTML5, así que la variedad nace en la combinación, exploración y manipulación de las hojas de estilo. \\
 
-Este documento, dividido en secciones, hace un barrido por cada una de las páginas y acaba con unas breves reflexiones extraídas a la luz del desarrollo de la práctica. Dos espinitas he llevo de esta práctica: por un lado, entregar un footer rudimentario y, por otra, no haber conseguido que funcione el menú responsive con la famosa "hamburguesa". Por más que lo he intentado, no ha llegado a funcionar correctamente.
+Este documento, dividido en secciones, hace un barrido por cada una de las páginas y acaba con unas breves reflexiones extraídas a la luz del desarrollo de la práctica. Dos espinitas me llevo de esta práctica: por un lado, entregar un footer rudimentario y, por otra, no haber conseguido que funcione el menú responsive en todas las páginas, consiguiéndolo sólo en Actividades. Por más que lo he intentado, no ha llegado a funcionar correctamente.
  
 \section{Inicio}
 
@@ -48,9 +48,11 @@ El pie de página es verdaderamente rudimentario, pero no he conseguido nada vis
 
 Se pedía que la página de Actividades, alojada en \textit{actividades.html}, fuera responsive. Para conseguirlo, he dividido el cuerpo en dos partes: a la izquierda, todas las actividades que se proponen en el centro deportivo (las clases split-left y split-right en \textit{actividades.css}, con distintas fuentes y configuraciones). Dichas actividades están listadas y encapsuladas en cajas para darle un bonito estilo. La parte derecha es la de noticias, con una imagen de fondo. En el caso de que el tamaño de la pantalla se reduzca, los tamaños de los elementos para que sea visible en pantallas más pequeñas. Hago una primera distinción a 720px, reduciendo las fuentes de las etiquetas \textit{h2}, y luego a 500px, donde ya sí reduzco imágenes, el título de la página, el logo y las cajas de actividades.
 
+He introducido una modificación en el menú general, haciéndolo responsive. Cuando la pantalla está entre 250px y 1170px entra en acción, desapareciendo el menú general y apareciendo una barrita oscura donde se puede pinchar (un botón) y se despliega el menú (dicha modificación está en \textit{menu.css}). Así, la página actividades.html es totalmente adaptable a móviles.
+
 \section{Horario}
 
-El horario de un centro deportivo \textit{horario.html} es un ejemplo claro de aplicación de tablas estudiadas en HTML5. He utilizado las etiquetas <thead> y <tfoot> para poner en práctica lo aprendido en clase. En la hoja de estilos, \textit{horario.css}, he utilizado una fuente distinta y, sobre todo, he distinguido entre los elementos  pares e impares de las filas para que tengan distintos tonos de color y darle una impresión mejor. Además, al posar el ratón en las filas más oscuras, se esclarecen.
+El horario de un centro deportivo \textit{horario.html} es un ejemplo claro de aplicación de tablas estudiadas en HTML5. He utilizado las etiquetas <thead> y <tfoot> para poner en práctica lo aprendido en clase. En la hoja de estilos, \textit{horario.css}, he utilizado una fuente distinta y, sobre todo, he distinguido entre los elementos  pares e impares de las filas para que tengan distintos tonos de color y darle una impresión mejor. Además, al posar el ratón en las filas más oscuras, se esclarecen. Añadiendo la cláusula 'overflow-x:auto', al disminuir el tamaño de la pantalla, aunque la tabla mantiene proporciones, aparece automáticamente un scroll en el eje X para así desplazarte por la misma.
 
 \section{Técnicos}
 
@@ -70,7 +72,7 @@ Para la página de precios, también extra, he utilizado la división de Técnic
 El alta de usuario, situado en \textit{formularioalta.html}, contiene un gran formulario. En él, he incluido ciertas etiquetas novedosas de HTML5. \\
 En primer lugar, divido la información en personal y deportiva, por medio de la etiqueta \textit{fieldset}. Para recoger el email y el teléfono utilizo los types \textit{tel} y \textit{email}. Además, para aquella información con múltiples alternativas, utilizo <select>, checkboxes, y <datalist>, nueva en HTML5. \\
 
-Por último, el formulario cuenta con dos botones: reset, con su funcionalidad estándar; y enviar, en el que he incluido, por medio de la cláusula \textit{onclick} una pantallita emergente que nos informa de que la información se registró correctamente. Desde el punto de vista del estilo, cuando se selecciona un campo para escribir en él, dicho campo de texto cambia de color, dando la sensación de estar seleccionado.
+Por último, el formulario cuenta con dos botones: reset, con su funcionalidad estándar; y enviar, en el que he incluido, por medio de la cláusula \textit{onclick} una pantallita emergente que nos informa de que la información se registró correctamente. Desde el punto de vista del estilo, cuando se selecciona un campo para escribir en él, dicho campo de texto cambia de color, dando la sensación de estar seleccionado. El formulario es totalmente responsive.
 
 \section{Foro}
 
